--- a/Assingnmet no 2/form/index.html
+++ b/Assingnmet no 2/form/index.html
@@ -54,6 +54,10 @@
       padding-right: 28.6%;
       padding-top: 10px;
       padding-bottom: 10px;
+      border-radius: 20px;
+      border-width: 1px;
+      border-style: solid;
+      background-color:#E0E0E0;
     }
     .add {
       margin-left: 73.8px;
