--- a/Assingnmet no 2/form/index.html
+++ b/Assingnmet no 2/form/index.html
@@ -147,9 +147,9 @@
       <input class="mb" type="text" placeholder="only 10 digits are allowed" id="number" name="lname" max="9" >  <br><br>
       <label>Gender&#58;</label>    
       <input class="mb" type="radio" id="male" name="genderr">
-      <label for="genderr">Male</label> 
+      <label for="male">Male</label> 
       <input type="radio" id="female" name="genderr">
-      <label for="genderr">Female</label>  <br><br>
+      <label for="female">Female</label>  <br><br>
       <label for="DOB">Date of Birth&#58;</label>
       <input class="dob" type="date" id="DOB"><br><br>
       <label for="Addresss">Address&#58;</label>
