--- a/Assingnmet no 2/table/index.html
+++ b/Assingnmet no 2/table/index.html
@@ -3,9 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Table</title>
+  <style>
+    th,td {
+      padding:7px;
+    }
+  </style>
 </head>
 <body>
+  <center>
+    <h4>Hamza's Timetable</h4>
+  </center>
+  <center>
+    <table border="2">
+      <tr>
+        <td></td>
+        <td></td>
+        <td colspan="3">Morning</td>
+        <td>lunch</td>
+        <td colspan="4">afternoon</td>
+        <td colspan="3">evening</td>
+      </tr>
+      <tr>
+        <td rowspan="2"></td>
+        <td rowspan="2"></td>
+        <td rowspan="2">9-<br>10<br>am</td>
+        <td rowspan="2">10-<br>11<br>am</td>
+        <td rowspan="2">11-<br>12<br>am</td>
+        <td rowspan="2">1-2<br>pm</td>
+        <td rowspan="2">2-<br>3<br>pm</td>
+        <td rowspan="2">3-<br>4<br>pm</td>
+        <td rowspan="2">4-<br>5<br>pm</td>
+        <td rowspan="2">5-6 pm</td>
+        <td rowspan="2">6-<br>7<br>pm</td>
+        <td rowspan="2">7-<br>8<br>pm</td>
+        <td rowspan="2">8-9<br>pm</td>
+      </tr>
+      <tr>
   
+      </tr>
+      <tr>
+        <td rowspan="2">Work</td>
+        <td>Monday</td>
+        <td colspan="3">Development<br>Meeting</td>
+        <td></td>
+        <td colspan="3">Client<br>Meeting</td>
+        <td>commute</td>
+        <td colspan="3">Free</td>
+      </tr>
+      <tr>
+        <td>Tuesday</td>
+        <td colspan="3">in Office</td>
+        <td></td>
+        <td colspan="7">in Office</td>
+      </tr>
+      <tr>
+        <td rowspan="2">Lecture</td>
+        <td>Wednesday</td>
+        <td colspan="3">CSC205</td>
+        <td></td>
+        <td colspan="7">preparation</td>
+      </tr>
+      <tr>
+        <td>Thursday</td>
+        <td colspan="3">MAM200</td>
+        <td></td>
+        <td colspan="3">Tutorials<br>for<br>MAM200</td>
+        <td colspan="4">Free</td>
+      </tr>
+      <tr>
+        <td>Research</td>
+        <td>Friday</td>
+        <td colspan="3">Research</td>
+        <td></td>
+        <td colspan="7">Research</td>
+      </tr>
+      <tr></tr>
+    </table>
+  </center>
+
 </body>
 </html>
