--- a/Assingnmet no 2/table/index.html
+++ b/Assingnmet no 2/table/index.html
@@ -3,19 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Table</title>
+  <title>Document</title>
   <style>
-    th,td {
-      padding:7px;
+    .th,td {
+      padding: 6px;
+      text-align: center;
+      background-color: rgb(185, 185, 27);
+      border-color: rgb(255, 0, 200);
+      border-width: 3px;
+      border-style: solid;
+      color: rgb(90, 31, 145);
     }
   </style>
 </head>
 <body>
   <center>
-    <h4>Hamza's Timetable</h4>
+    <h4>
+      Hamza's TimeTable
+    </h4>
   </center>
   <center>
-    <table border="2">
+    <table border="1">
       <tr>
         <td></td>
         <td></td>
@@ -39,9 +47,7 @@
         <td rowspan="2">7-<br>8<br>pm</td>
         <td rowspan="2">8-9<br>pm</td>
       </tr>
-      <tr>
-  
-      </tr>
+      <tr></tr>
       <tr>
         <td rowspan="2">Work</td>
         <td>Monday</td>
@@ -59,7 +65,7 @@
       </tr>
       <tr>
         <td rowspan="2">Lecture</td>
-        <td>Wednesday</td>
+        <td>Wedenesday</td>
         <td colspan="3">CSC205</td>
         <td></td>
         <td colspan="7">preparation</td>
