--- a/Assingnment no 3/website with css/menu.html
+++ b/Assingnment no 3/website with css/menu.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    body {
+      margin-bottom: 100px;
+    }
     .spoon-icon {
       width: 27px;
       vertical-align: middle;
@@ -168,17 +171,22 @@
     .x-p {
       margin-left: 6px;
       align-items: center;
-      color: gray;
+      color: green;
+      font-weight: bold;
+
       margin-bottom: 0;
     }
     .large-p {
       margin-left: 6px;
       width: 180px;
-      color: gray;
+      color: green;
       font-size: 14px;
+      font-weight: bold;
+
       margin-top: 2px;
     }
     .rs-p {
+      color: green;
       margin-left: 6px;
       font-weight: bold;
       font-size: 17px;
