--- a/Assingnment no 3/website with css/contact.html
+++ b/Assingnment no 3/website with css/contact.html
@@ -80,7 +80,7 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       margin-left: 30px;
       margin-top: 55px;
-      color: rgb(130, 130, 36);
+      color: green;
     }
     .P-tag,
     .lable-1,
@@ -88,7 +88,7 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       margin-left: 30px;
       margin-top: 15px;
-      color: rgb(130, 130, 36);
+      color: green;
       width: 490px;
     }
     .lable-1 {
@@ -99,7 +99,7 @@
     .input-1,
     .input-2 {
       border-width: 1px;
-      border-color: rgb(130, 130, 36);
+      border-color: green;
       border-style: solid;
       color: gray;
       margin-left: 30px;
@@ -115,7 +115,7 @@
     .input-2:focus {
       border: 2px;
       border-style: solid;
-      border-color:  rgba(130, 130, 36, 0.877);
+      border-color:  green;
     }
     .lable-2 {
       display: block;
@@ -127,12 +127,12 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       margin-left: 30px;
       margin-top: 5px;
-      color: rgb(130, 130, 36);
+      color: green;
       font-size: 14px;
     }
     .textarea-1 {
       border-width: 1px;
-      border-color: rgb(130, 130, 36);
+      border-color: green;
       border-style: solid;
       color: gray;
       margin-left: 30px;
@@ -156,7 +156,7 @@
   </style>
 </head>
 <body style="margin: 0;
-background-color: rgb(91, 44, 13);">
+background-color: black;">
   <div class="container-1">
     <div class="container-2">
       <img class="spoon-icon" src="spoon-and-fork-icon-25.jpg">
