--- a/Assignment no 9/Strings Problems/Prob-1.html
+++ b/Assignment no 9/Strings Problems/Prob-1.html
@@ -9,7 +9,7 @@
   <script>
     function length(str) {
       let string1 = str.length;
-      console.log(string1);
+      return string1;
     }
     let word1 = "hello";
     let word2 = "World";
