--- a/Assignment no 9/Strings Problems/Prob-19.html
+++ b/Assignment no 9/Strings Problems/Prob-19.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <script>
-    
-  </script>
+
+
+    <script>
+        let str = prompt("Enter a String :")
+        function findLongestWord(str) {
+            const words = str.split(' ');
+            let longestWord = '';
+        
+            for (const word of words) {
+            if (word.length > longestWord.length) {
+                longestWord = word;
+            }
+            }
+            return longestWord;
+        }
+        console.log(`Longest word in a string is ${findLongestWord(str)}`)  
+    </script>
 </body>
 </html>
